fixing nav bar on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,7 @@ img {
 	-o-transition: all .6s; -moz-transition: all .6s; -webkit-transition: all .6s; -ms-transition: all .6s; transition: all .6s;
 	backface-visibility: hidden;
 }
-.navbar.navbar-no-bg { background: #eee; background: rgba(0, 0, 0, 0.2); }
+.navbar.navbar-no-bg { background: var(--azurish); background: rgba(0, 0, 0, 0.2); }
 
 .navbar-dark .navbar-nav { font-size: 15px; color: #fff; font-weight: 600; }
 .navbar-dark .navbar-nav .nav-link { color: var(--vanilla); color: rgba(255, 255, 255, 0.8); border: 0; }
